--- a/src/gui_pkg/templates/inet_radar.html
+++ b/src/gui_pkg/templates/inet_radar.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>Radar Display Example</title>
+  <title>Network Radar Display</title>
   <style>
     /* Container for the whole layout */
     #container {
