--- a/src/gui_pkg/templates/radar.html
+++ b/src/gui_pkg/templates/radar.html
@@ -23,6 +23,7 @@
       font-family: sans-serif;
       background: #f7f7f7;
       overflow-y: auto;
+      font-size: small;
     }
 
     /* Radar canvas area */
