--- a/src/gui_pkg/templates/radar.html
+++ b/src/gui_pkg/templates/radar.html
@@ -23,7 +23,6 @@
       font-family: sans-serif;
       background: #f7f7f7;
       overflow-y: auto;
-      font-size: small;
     }
 
     /* Radar canvas area */
@@ -34,6 +33,7 @@
       align-items: center;
       justify-content: center;
       background: #222; /* just a dark background behind the radar */
+      font-size: xx-small;
     }
 
     /* The radar canvas */
