--- a/src/gui_pkg/templates/scan.html
+++ b/src/gui_pkg/templates/scan.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Dynamic REST API Page</title>
+  <title>Scan & Flood</title>
   <style>
     body {
       margin: 0;
@@ -47,7 +47,7 @@
 <body>
   <div class="container">
     <div class="left-panel">
-      <h2>API Results</h2>
+      <h2>Responses</h2>
       <div id="result">
         <!-- REST API responses will be displayed here -->
       </div>
